--- a/kvack.html
+++ b/kvack.html
@@ -14,38 +14,60 @@
   <header id="navbar">
     <nav>
       <ul>
-        <li><a href="#wedding"><i class="fas fa-map-marker-alt"></i> Bröllop!</a></li>
-        <li><a href="#venue"><i class="fas fa-map-marker-alt"></i> Plats & Tid</a></li>
-        <li><a href="#area"><i class="fas fa-city"></i> Boende</a></li>
-        <li><a href="#rsvp"><i class="fas fa-envelope"></i> OSA</a></li>
-        <!--<li><a href="#photos"><i class="fas fa-camera"></i> Bilder</a></li>-->
-        <!--<li><a href="#music"><i class="fas fa-music"></i> Musik</a></li>-->
+        <li><a href="#wedding"><i class="fas fa-heart"></i><span> Bröllop!</span></a></li>
+        <li><a href="#venue"><i class="fas fa-map-marker-alt"></i><span> Plats & Tid</span></a></li>
+        <li><a href="#housing"><i class="fas fa-city"></i><span> Boende</span></a></li>
+        <li><a href="#rsvp"><i class="fas fa-envelope"></i><span> OSA</span></a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <section id="wedding">
-      <!--<h1>Platsen</h1>-->
-      <p>2025 07 05</p>
+      <div class="banner">
+        <p>2025 07 05</p>
+      </div>
     </section>
     <section id="venue">
-      <h1>Platsen</h1>
-      <p>Detaljer om bröllopsplatsen.</p>
+      <div class="flexContainer">
+        <div class="flex">
+          <h1>Bränntorps gård</h1>
+          <p>618 92 Kolmården</p>
+        </div>
+        <div class="flex">
+          <h1>Hitta hit</h1>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.1570528088538!2d16.409618999848703!3d58.6684738966801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737451447179!5m2!1sen!2sse" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="flex">
+          <h1>Datum och tid</h1>
+          <p>2025-07-05 14:30</p>
+        </div>
+      </div>
     </section>
-    <section id="area">
-      <h1>Området</h1>
-      <p>Utforska lokala sevärdheter och boenden.</p>
-    </section>
-    <section id="info">
-      <h1>Viktig information</h1>
-      <p>Nyckeldetaljer om eventet för gäster.</p>
+    <section id="housing">
+      <h1>Boende</h1>
+      <div class="flexContainer">
+        <div class="flex">
+          <h1>Bränntorps gård</h1>
+          <p>stugor</p>
+        </div>
+        <div class="flex">
+          <h1>Bränntorps gård</h1>
+          <p>stugor</p>
+        </div>
+        <div class="flex">
+          <h1>Bränntorps gård</h1>
+          <p>stugor</p>
+        </div>
+      </div>
     </section>
     <section id="rsvp">
       <h1>OSA</h1>
       <p>Svara <a href="mailto:osa@vidaochmarcus.se">osa (at) vidaochmarcus.se</a> senast den 30 mars!</p>
       <p>Glöm inte att inkludera eventuella kostpreferenser eller allergier.</p>
     </section>
+
+    <!--
     <section id="photos">
       <h1>Ladda upp bilder</h1>
       <input type="file" accept="image/*">
@@ -56,6 +78,7 @@
       <textarea placeholder="Föreslå låtar här"></textarea>
       <button>Skicka</button>
     </section>
+  -->
   </main>
 
   <script src="script.js"></script>
