--- a/kvack.html
+++ b/kvack.html
@@ -17,6 +17,7 @@
         <li><a href="#wedding"><i class="fas fa-heart"></i><span> Bröllop!</span></a></li>
         <li><a href="#venue"><i class="fas fa-map-marker-alt"></i><span> Plats & Tid</span></a></li>
         <li><a href="#housing"><i class="fas fa-city"></i><span> Boende</span></a></li>
+        <li><a href="#toastmasters"><i class="fas fa-bullhorn"></i><span> Toastmasters</span></a></li>
         <li><a href="#rsvp"><i class="fas fa-envelope"></i><span> OSA</span></a></li>
       </ul>
     </nav>
@@ -29,18 +30,24 @@
       </div>
     </section>
     <section id="venue">
+      <h1>Plats & Tid</h1>
       <div class="flexContainer">
         <div class="flex">
           <h1>Bränntorps gård</h1>
           <p>618 92 Kolmården</p>
-        </div>
-        <div class="flex">
-          <h1>Hitta hit</h1>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.1570528088538!2d16.409618999848703!3d58.6684738966801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737451447179!5m2!1sen!2sse" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
         </div>
         <div class="flex">
           <h1>Datum och tid</h1>
           <p>2025-07-05 14:30</p>
+          <p>Vad händer under dagen</p>
+        </div>
+        <div class="flex">
+          <h1>Viktig info</h1>
+          <p>Ifall det blir regn</p>
+          <p>Present</p>
+          <p>Scrolla ner för att se toastmasters</p>
         </div>
       </div>
     </section>
@@ -48,18 +55,28 @@
       <h1>Boende</h1>
       <div class="flexContainer">
         <div class="flex">
-          <h1>Bränntorps gård</h1>
-          <p>stugor</p>
+          <h2>Bränntorps gård</h2>
+          <img src="assets/branntorp.png">
+          <p>På gården där festen äger rum finns ett antal stugor som är våra att använda. När inbjudningarna skickas ut finns det både enstaka sängplatser och hela stugor lediga. Dessa går att boka för 250 kr per sängplats. Anmäl intresse genom att mejla MEJLADRESS. Vi ser gärna att alla sängplatser på gården nyttjas så gå gärna ihop flera som kan tänka sig att dela rum.</p>
         </div>
         <div class="flex">
-          <h1>Bränntorps gård</h1>
-          <p>stugor</p>
+          <h2>Asplunda gård</h2>
+          <p>Gård på 15 minuters promenad från Bränntorp. Stugor finns att boka via booking.se. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
         </div>
         <div class="flex">
-          <h1>Bränntorps gård</h1>
-          <p>stugor</p>
+          <h2>First camp Kolmården</h2>
+          <p>Stugcamping på 20 minuters promenad från Bränntorp. Boka via booking.se. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
+        </div>
+        <div class="flex">
+          <h2>Centrala Norrköping</h2>
+          <p>I Norrköping finns flera hotell och vandrarhem med olika prisklasser. Det går lätt att ta sig till och från centrala Norrköping från Bränntorps gård. Med bil tar resan under 30 minuter och med buss (420) omkring 35 minuter. Närmaste busshållplatsen (Marmorbruksvägen) ligger 5 minuter från gården men senare på natten kan man behöva gå bort till Sandviken, vilket är en promenad på 20 minuter.</p>
         </div>
       </div>
+    </section>
+    <section id="toastmasters">
+      <h1>Toastmasters</h1>
+      <p>Här är Ditte & Anton som är toastmasters oj vad bra</p>
+      <p>Maila <a href="mailto:x">x (at) y.z</a> om du har nåt att säga</p>
     </section>
     <section id="rsvp">
       <h1>OSA</h1>
