--- a/kvack.html
+++ b/kvack.html
@@ -33,18 +33,18 @@
       <h1>Plats & Tid</h1>
       <div class="flexContainer">
         <div class="flex">
-          <h1>Bränntorps gård</h1>
+          <h2>Bränntorps gård</h2>
           <p>618 92 Kolmården</p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.1570528088538!2d16.409618999848703!3d58.6684738966801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737451447179!5m2!1sen!2sse" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         
         </div>
         <div class="flex">
-          <h1>Datum och tid</h1>
+          <h2>Datum och tid</h2>
           <p>2025-07-05 14:30</p>
           <p>Vad händer under dagen</p>
         </div>
         <div class="flex">
-          <h1>Viktig info</h1>
+          <h2>Viktig info</h2>
           <p>Ifall det blir regn</p>
           <p>Present</p>
           <p>Scrolla ner för att se toastmasters</p>
@@ -57,7 +57,8 @@
         <div class="flex">
           <h2>Bränntorps gård</h2>
           <img src="assets/branntorp.png">
-          <p>På gården där festen äger rum finns ett antal stugor som är våra att använda. När inbjudningarna skickas ut finns det både enstaka sängplatser och hela stugor lediga. Dessa går att boka för 250 kr per sängplats. Anmäl intresse genom att mejla MEJLADRESS. Vi ser gärna att alla sängplatser på gården nyttjas så gå gärna ihop flera som kan tänka sig att dela rum.</p>
+          <p>På gården där festen äger rum finns ett antal stugor som är våra att använda.</p>
+          <p>När inbjudningarna skickas ut finns det både enstaka sängplatser och hela stugor lediga. Dessa går att boka för 250 kr per sängplats. Anmäl intresse genom att mejla MEJLADRESS. Vi ser gärna att alla sängplatser på gården nyttjas så gå gärna ihop flera som kan tänka sig att dela rum.</p>
         </div>
         <div class="flex">
           <h2>Asplunda gård</h2>
