--- a/kvack.html
+++ b/kvack.html
@@ -25,8 +25,7 @@
 
   <main>
     <section id="wedding">
-      <div class="banner">
-        <p>2025 07 05</p>
+      <div id="dateText" class="banner">
       </div>
     </section>
     <section id="venue">
@@ -35,19 +34,22 @@
         <div class="flex">
           <h2>Bränntorps gård</h2>
           <p>618 92 Kolmården</p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.1570528088538!2d16.409618999848703!3d58.6684738966801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737451447179!5m2!1sen!2sse" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        
-        </div>
-        <div class="flex">
-          <h2>Datum och tid</h2>
-          <p>2025-07-05 14:30</p>
-          <p>Vad händer under dagen</p>
+          <p>Både vigsel och fest äger rum här.</p>
+          <iframe max-width="90%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.1570528088538!2d16.409618999848703!3d58.6684738966801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737451447179!5m2!1sen!2sse" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="flex">
           <h2>Viktig info</h2>
-          <p>Ifall det blir regn</p>
-          <p>Present</p>
-          <p>Scrolla ner för att se toastmasters</p>
+          <p>14:30 Vigselceremoni</p>
+          <p>15:00 Mingel, snittar och fotografering</p>
+          <p>18:00 Bröllopsmiddag</p>
+          <p>23:00 (c:a) Fest med musik och dans</p>
+
+          <p class="left margin-top">
+            <b>Om det skulle bli regn</b>
+            är vi så lite utomhus som det går. 
+            Festlokalen kommer vara öppen från klockan 13 för gäster som är på plats tidigt och man kan också vara i stugorna. 
+            Vigseln är då i ridhuset och minglet i ridhuset och festlokalen.
+          </p>
         </div>
       </div>
     </section>
@@ -56,33 +58,44 @@
       <div class="flexContainer">
         <div class="flex">
           <h2>Bränntorps gård</h2>
-          <img src="assets/branntorp.png">
+          <img src="assets/branntorp.png"/>
           <p>På gården där festen äger rum finns ett antal stugor som är våra att använda.</p>
           <p>När inbjudningarna skickas ut finns det både enstaka sängplatser och hela stugor lediga. Dessa går att boka för 250 kr per sängplats. Anmäl intresse genom att mejla MEJLADRESS. Vi ser gärna att alla sängplatser på gården nyttjas så gå gärna ihop flera som kan tänka sig att dela rum.</p>
         </div>
         <div class="flex">
           <h2>Asplunda gård</h2>
-          <p>Gård på 15 minuters promenad från Bränntorp. Stugor finns att boka via booking.se. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
+          <img src="assets/asplunda.jpg"/>
+          <p>Gård på 15 minuters promenad från Bränntorp. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
+          <p>Stugorna finns att boka på <a href="https://www.booking.com">booking.com</a>.</p>
         </div>
         <div class="flex">
-          <h2>First camp Kolmården</h2>
-          <p>Stugcamping på 20 minuters promenad från Bränntorp. Boka via booking.se. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
+          <h2>First Camp Kolmården</h2>
+          <img src="assets/firstcamp.jpeg"/>
+          <p>Stugcamping på 20 minuters promenad från Bränntorp. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
+          <p>Stugorna finns att boka på <a href="https://www.booking.com">booking.com</a>.</p>
         </div>
         <div class="flex">
           <h2>Centrala Norrköping</h2>
-          <p>I Norrköping finns flera hotell och vandrarhem med olika prisklasser. Det går lätt att ta sig till och från centrala Norrköping från Bränntorps gård. Med bil tar resan under 30 minuter och med buss (420) omkring 35 minuter. Närmaste busshållplatsen (Marmorbruksvägen) ligger 5 minuter från gården men senare på natten kan man behöva gå bort till Sandviken, vilket är en promenad på 20 minuter.</p>
+          <img src="assets/nkpg.jpg"/>
+          <p>I Norrköping finns flera hotell och vandrarhem med olika prisklasser och det går lätt att ta sig till och från centrala Norrköping från Bränntorps gård.</p>
+          <p>Med bil tar resan under 30 minuter och med buss (420) omkring 35 minuter.</p>
+          <p>Närmaste busshållplatsen (<b>Marmorbruksvägen</b>) ligger 5 minuter från gården men senare på natten kan man behöva gå bort till <b>Sandviken</b>, vilket är en promenad på 20 minuter.</p>
         </div>
       </div>
     </section>
     <section id="toastmasters">
       <h1>Toastmasters</h1>
+      <p>Ditte & Anton!</p>
+      <img src="assets/dinton1.jpg"/>
       <p>Här är Ditte & Anton som är toastmasters oj vad bra</p>
       <p>Maila <a href="mailto:x">x (at) y.z</a> om du har nåt att säga</p>
     </section>
     <section id="rsvp">
       <h1>OSA</h1>
-      <p>Svara <a href="mailto:osa@vidaochmarcus.se">osa (at) vidaochmarcus.se</a> senast den 30 mars!</p>
-      <p>Glöm inte att inkludera eventuella kostpreferenser eller allergier.</p>
+      <p><b>Senast den 30 mars</b></p>
+      <p>Ring oss eller maila till <a href="mailto:osa@vidaochmarcus.se">osa (at) vidaochmarcus.se</a>.</p>
+      <p>Berätta då också om eventuella kostpreferenser eller allergier.</p>
+      <p class="bottom">Varmt välkomna! Mvh Vida & Marcus</p>
     </section>
 
     <!--
@@ -97,6 +110,10 @@
       <button>Skicka</button>
     </section>
   -->
+
+    <section id="end">
+
+    </section>
   </main>
 
   <script src="script.js"></script>
