--- a/kvack.html
+++ b/kvack.html
@@ -15,7 +15,8 @@
     <nav>
       <ul>
         <li><a href="#wedding"><i class="fas fa-heart"></i><span> Bröllop!</span></a></li>
-        <li><a href="#venue"><i class="fas fa-map-marker-alt"></i><span> Plats & Tid</span></a></li>
+        <li><a href="#venue"><i class="fas fa-clock"></i><span> Viktig info</span></a></li>
+        <li><a href="#map"><i class="fas fa-map"></i><span> Map</span></a></li>
         <li><a href="#housing"><i class="fas fa-city"></i><span> Boende</span></a></li>
         <li><a href="#toastmasters"><i class="fas fa-bullhorn"></i><span> Toastmasters</span></a></li>
         <li><a href="#rsvp"><i class="fas fa-envelope"></i><span> OSA</span></a></li>
@@ -29,16 +30,10 @@
       </div>
     </section>
     <section id="venue">
-      <h1>Plats & Tid</h1>
+      <h1>Viktig info</h1>
       <div class="flexContainer">
         <div class="flex">
-          <h2>Bränntorps gård</h2>
-          <p>618 92 Kolmården</p>
-          <p>Både vigsel och fest äger rum här.</p>
-          <iframe max-width="90%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924.1570528088538!2d16.409618999848703!3d58.6684738966801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737451447179!5m2!1sen!2sse" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="flex">
-          <h2>Viktig info</h2>
+          <h2>Hålltider</h2>
           <p>14:30 Vigselceremoni</p>
           <p>15:00 Mingel, snittar och fotografering</p>
           <p>18:00 Bröllopsmiddag</p>
@@ -51,7 +46,25 @@
             Vigseln är då i ridhuset och minglet i ridhuset och festlokalen.
           </p>
         </div>
+        
+        <div class="flex">
+          <h2>Adress</h2>
+          <p><b>Bränntorps Gård</b></p>
+          <p><b>618 92 Kolmården</b></p>
+          <p>Både vigsel och fest äger rum här.</p>
+          <p>Scrolla ner för att se karta.</p>
+        </div>
       </div>
+    </section>
+    <section id="map">
+      <iframe 
+        max-width="100%" 
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8299.01697434119!2d16.4046469139157!3d58.66692945396661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737888621575!5m2!1sen!2sse">
+      </iframe>
     </section>
     <section id="housing">
       <h1>Boende</h1>
@@ -88,7 +101,7 @@
       <p>Ditte & Anton!</p>
       <img src="assets/dinton1.jpg"/>
       <p>Här är Ditte & Anton som är toastmasters oj vad bra</p>
-      <p>Maila <a href="mailto:x">x (at) y.z</a> om du har nåt att säga</p>
+      <p>Maila <a href="vidaochmarcus.toastmasters@outlook.com">vidaochmarcus.toastmasters (at) outlook.com</a> om du har nåt att säga</p>
     </section>
     <section id="rsvp">
       <h1>OSA</h1>
