--- a/kvack.html
+++ b/kvack.html
@@ -30,7 +30,7 @@
       </div>
     </section>
     <section id="venue">
-      <h1>Viktig info</h1>
+      <h1><i class="fas fa-clock"></i> Viktig info</h1>
       <div class="flexContainer">
         <div class="flex">
           <h2>Hålltider</h2>
@@ -61,13 +61,12 @@
         max-width="100%" 
         style="border:0;"
         allowfullscreen=""
-        loading="lazy" 
         referrerpolicy="no-referrer-when-downgrade"
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8299.01697434119!2d16.4046469139157!3d58.66692945396661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737888621575!5m2!1sen!2sse">
       </iframe>
     </section>
     <section id="housing">
-      <h1>Boende</h1>
+      <h1><i class="fas fa-city"></i> Boende</h1>
       <div class="flexContainer">
         <div class="flex">
           <h2>Bränntorps gård</h2>
@@ -97,26 +96,31 @@
       </div>
     </section>
     <section id="toastmasters">
-      <h1>Toastmasters</h1>
+      <h1><i class="fas fa-bullhorn"></i> Toastmasters</h1>
       <p>Ditte & Anton!</p>
       <img src="assets/dinton1.jpg"/>
       <p>Här är Ditte & Anton som är toastmasters oj vad bra</p>
       <p>Maila <a href="vidaochmarcus.toastmasters@outlook.com">vidaochmarcus.toastmasters (at) outlook.com</a> om du har nåt att säga</p>
     </section>
+    
+    <!--<section id="photos">
+      <h1>Bilder</h1>
+      <div class="box">
+        <input type="file" accept="image/*" disabled="true">
+      </div>
+      <p>Här kommer vi efter bröllopet samla ihop foton, mer info om det senare.</p>
+    </section>-->
+
     <section id="rsvp">
-      <h1>OSA</h1>
+      <h1><i class="fas fa-envelope"></i> OSA</h1>
       <p><b>Senast den 30 mars</b></p>
       <p>Ring oss eller maila till <a href="mailto:osa@vidaochmarcus.se">osa (at) vidaochmarcus.se</a>.</p>
       <p>Berätta då också om eventuella kostpreferenser eller allergier.</p>
       <p class="bottom">Varmt välkomna! Mvh Vida & Marcus</p>
     </section>
 
-    <!--
-    <section id="photos">
-      <h1>Ladda upp bilder</h1>
-      <input type="file" accept="image/*">
-      <p>Ladda upp dina bästa ögonblick med paret!</p>
-    </section>
+
+  <!--
     <section id="music">
       <h1>Musikförslag</h1>
       <textarea placeholder="Föreslå låtar här"></textarea>
@@ -124,9 +128,9 @@
     </section>
   -->
 
-    <section id="end">
+    <!--<section id="end">
 
-    </section>
+    </section>-->
   </main>
 
   <script src="script.js"></script>
