--- a/kvack.html
+++ b/kvack.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="#wedding"><i class="fas fa-heart"></i><span> Bröllop!</span></a></li>
         <li><a href="#venue"><i class="fas fa-clock"></i><span> Viktig info</span></a></li>
-        <li><a href="#map"><i class="fas fa-map"></i><span> Map</span></a></li>
+        <li><a href="#map"><i class="fas fa-map"></i><span> Karta</span></a></li>
         <li><a href="#housing"><i class="fas fa-city"></i><span> Boende</span></a></li>
         <li><a href="#toastmasters"><i class="fas fa-bullhorn"></i><span> Toastmasters</span></a></li>
         <li><a href="#rsvp"><i class="fas fa-envelope"></i><span> OSA</span></a></li>
@@ -57,6 +57,8 @@
       </div>
     </section>
     <section id="map">
+      <div id="buffer">
+      </div>
       <iframe 
         max-width="100%" 
         style="border:0;"
