--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <p>Under konstruktion</p>
+  <main>
+    <section id="wedding">
+      <div id="dateText" class="banner">
+      </div>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
