--- a/kvack.html
+++ b/kvack.html
@@ -30,20 +30,20 @@
       </div>
     </section>
     <section id="venue">
+      <!-- Bilden ser ful ut -->
       <h1><i class="fas fa-clock"></i> Viktig info</h1>
-      <div class="flexContainer">
+      <div class="narrow flexContainer">
         <div class="flex">
           <h2>Hålltider</h2>
-          <p>14:30 Vigselceremoni</p>
+          <p>14:30 Borgerlig vigselceremoni</p>
           <p>15:00 Mingel, snittar och fotografering</p>
           <p>18:00 Bröllopsmiddag</p>
           <p>23:00 (c:a) Fest med musik och dans</p>
 
           <p class="left margin-top">
             <b>Om det skulle bli regn</b>
-            är vi så lite utomhus som det går. 
-            Festlokalen kommer vara öppen från klockan 13 för gäster som är på plats tidigt och man kan också vara i stugorna. 
-            Vigseln är då i ridhuset och minglet i ridhuset och festlokalen.
+            är vi så lite utomhus som det går. Vigseln är då i ridhuset.
+            Festlokalen är i så fall öppen från klockan 13 för gäster som är på plats tidigt och man kan också vara i stugorna.
           </p>
         </div>
         
@@ -51,7 +51,7 @@
           <h2>Adress</h2>
           <p><b>Bränntorps Gård</b></p>
           <p><b>618 92 Kolmården</b></p>
-          <p>Både vigsel och fest äger rum här.</p>
+          <p>Både vigsel och fest äger rum på gården.</p>
           <p>Scrolla ner för att se karta.</p>
         </div>
       </div>
@@ -74,7 +74,7 @@
           <h2>Bränntorps gård</h2>
           <img src="assets/branntorp.png"/>
           <p>På gården där festen äger rum finns ett antal stugor som är våra att använda.</p>
-          <p>När inbjudningarna skickas ut finns det både enstaka sängplatser och hela stugor lediga. Dessa går att boka för 250 kr per sängplats. Anmäl intresse genom att mejla MEJLADRESS. Vi ser gärna att alla sängplatser på gården nyttjas så gå gärna ihop flera som kan tänka sig att dela rum.</p>
+          <p>När inbjudningarna skickas ut finns det både enstaka sängplatser och hela stugor lediga. Dessa går att boka för 250 kr per sängplats. Anmäl intresse genom att mejla <a href="" class="mailto">obfgnq@ivqnbpuznephf.fr</a>. Vi ser gärna att alla sängplatser på gården nyttjas så gå gärna ihop flera som kan tänka sig att dela rum.</p>
         </div>
         <div class="flex">
           <h2>Asplunda gård</h2>
@@ -99,10 +99,13 @@
     </section>
     <section id="toastmasters">
       <h1><i class="fas fa-bullhorn"></i> Toastmasters</h1>
-      <p>Ditte & Anton!</p>
-      <img src="assets/dinton1.jpg"/>
-      <p>Här är Ditte & Anton som är toastmasters oj vad bra</p>
-      <p>Maila <a href="vidaochmarcus.toastmasters@outlook.com">vidaochmarcus.toastmasters (at) outlook.com</a> om du har nåt att säga</p>
+      <div class="narrow">
+        <p>Som toastmasters har vi den stora äran att presentera <b>Ditte och Anton</b>! Detta musicerande, styrkelyftande och Uppsalaälskande power couple består av Vidas syster och blivande svåger.</p>
+
+        <img src="assets/dinton1.jpg"/>
+
+        <p>Vill du hålla ett tal eller något annat typ av framförande på festen? Allt är möjligt! Kontakta i så fall våra toastmasters på <a href="" class="mailto">ivqnbpuznephf.gbnfgznfgref@bhgybbx.pbz</a>.</p>
+      </div>
     </section>
     
     <!--<section id="photos">
@@ -115,10 +118,12 @@
 
     <section id="rsvp">
       <h1><i class="fas fa-envelope"></i> OSA</h1>
-      <p><b>Senast den 30 mars</b></p>
-      <p>Ring oss eller maila till <a href="mailto:osa@vidaochmarcus.se">osa (at) vidaochmarcus.se</a>.</p>
-      <p>Berätta då också om eventuella kostpreferenser eller allergier.</p>
-      <p class="bottom">Varmt välkomna! Mvh Vida & Marcus</p>
+      <div class="narrow border">  
+        <h2><b>Senast den 30 mars</b></h2>
+        <p>Maila till <a href="" class="mailto">bfn@ivqnbpuznephf.fr</a>.</p>
+        <p>Berätta då också om eventuella kostpreferenser eller allergier.</p>
+        <p class="bottom">Varmt välkomna! <i class="fas fa-heart"></i></p>
+      </div>
     </section>
 
 
