--- a/kvack.html
+++ b/kvack.html
@@ -32,19 +32,24 @@
     <section id="venue">
       <!-- Bilden ser ful ut -->
       <h1><i class="fas fa-clock"></i> Viktig info</h1>
+      
       <div class="narrow flexContainer">
-        <div class="flex">
-          <h2>Hålltider</h2>
-          <p>14:30 Borgerlig vigselceremoni</p>
-          <p>15:00 Mingel, snittar och fotografering</p>
-          <p>18:00 Bröllopsmiddag</p>
-          <p>23:00 (c:a) Fest med musik och dans</p>
+        <div class="flex subFlexContainer">
+          <div class="subFlex">
+            <img src="assets/wedding.jpg"/>
+          </div>          
+          <div class="subFlexLarge left">
+            <h2>Hålltider</h2>
+            <p><b>14:30</b> Borgerlig vigselceremoni</p>
+            <p><b>kl 15</b> Mingel, snittar och fotografering</p>
+            <p><b>kl 18</b> Bröllopsmiddag</p>
+            <p><b>kl 23</b> Fest med musik och dans</p>
 
-          <p class="left margin-top">
-            <b>Om det skulle bli regn</b>
-            är vi så lite utomhus som det går. Vigseln är då i ridhuset.
-            Festlokalen är i så fall öppen från klockan 13 för gäster som är på plats tidigt och man kan också vara i stugorna.
-          </p>
+            <p><b>Om det skulle bli regn</b>
+              är vi så lite utomhus som det går. Vigseln är då i ridhuset.
+              Festlokalen är i så fall öppen från klockan 13 för gäster som är på plats tidigt och man kan också vara i stugorna.
+              </p>
+          </div>
         </div>
         
         <div class="flex">
@@ -120,7 +125,7 @@
       <h1><i class="fas fa-envelope"></i> OSA</h1>
       <div class="narrow border">  
         <h2><b>Senast den 30 mars</b></h2>
-        <p>Maila till <a href="" class="mailto">bfn@ivqnbpuznephf.fr</a>.</p>
+        <p>Maila till: <a href="" class="mailto">bfn@ivqnbpuznephf.fr</a></p>
         <p>Berätta då också om eventuella kostpreferenser eller allergier.</p>
         <p class="bottom">Varmt välkomna! <i class="fas fa-heart"></i></p>
       </div>
