--- a/kvack.html
+++ b/kvack.html
@@ -74,7 +74,7 @@
     </section>
     <section id="housing">
       <h1><i class="fas fa-city"></i> Boende</h1>
-      <div class="flexContainer">
+      <div class="flexContainer div-container" id="div-container-0">
         <div class="flex">
           <h2>Bränntorps gård</h2>
           <img src="assets/branntorp.png"/>
@@ -100,6 +100,12 @@
           <p>Med bil tar resan under 30 minuter och med buss (420) omkring 35 minuter.</p>
           <p>Närmaste busshållplatsen (<b>Marmorbruksvägen</b>) ligger 5 minuter från gården men senare på natten kan man behöva gå bort till <b>Sandviken</b>, vilket är en promenad på 20 minuter.</p>
         </div>
+      </div>
+      <div class="dot-container" id="dot-container-0">
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+        <span class="dot"></span> 
       </div>
     </section>
     <section id="toastmasters">
