--- a/index.html
+++ b/index.html
@@ -11,13 +11,119 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header id="navbar">
+    <nav>
+      <ul>
+        <li><a href="#wedding"><i class="fas fa-heart"></i><span> Bröllop!</span></a></li>
+        <li><a href="#venue"><i class="fas fa-clock"></i><span> Viktig info</span></a></li>
+        <li><a href="#map"><i class="fas fa-map"></i><span> Karta</span></a></li>
+        <li><a href="#housing"><i class="fas fa-city"></i><span> Boende</span></a></li>
+        <li><a href="#toastmasters"><i class="fas fa-bullhorn"></i><span> Toastmasters</span></a></li>
+        <li><a href="#rsvp"><i class="fas fa-envelope"></i><span> OSA</span></a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
     <section id="wedding">
       <div id="dateText" class="banner">
       </div>
     </section>
-  </main>
+    <section id="venue">
+      <h1><i class="fas fa-clock"></i> Viktig info</h1>
+      <div class="narrow flexContainer">
+        <div class="flex subFlexContainer">
+          <div class="subFlex">
+            <img src="assets/wedding.jpg"/>
+          </div>          
+          <div class="subFlexLarge left">
+            <h2>Hålltider</h2>
+            <p><b>14:30</b> Borgerlig vigselceremoni</p>
+            <p><b>kl 15</b> Mingel, snittar och fotografering</p>
+            <p><b>kl 18</b> Bröllopsmiddag</p>
+            <p><b>kl 23</b> Fest med musik och dans</p>
 
+            <p><b>Om det skulle bli regn</b>
+              är vi så lite utomhus som det går. Vigseln är då i ridhuset.
+              Festlokalen är i så fall öppen från klockan 13 för gäster som är på plats tidigt och man kan också vara i stugorna.
+              </p>
+          </div>
+        </div>
+        <div class="flex">
+          <h2>Adress</h2>
+          <p><b>Bränntorps Gård</b></p>
+          <p><b>618 92 Kolmården</b></p>
+          <p>Både vigsel och fest äger rum på gården.</p>
+          <p>Scrolla ner för att se karta.</p>
+        </div>
+      </div>
+    </section>
+    <section id="map">
+      <div id="buffer">
+      </div>
+      <iframe 
+        max-width="100%" 
+        style="border:0;"
+        allowfullscreen=""
+        referrerpolicy="no-referrer-when-downgrade"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8299.01697434119!2d16.4046469139157!3d58.66692945396661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737888621575!5m2!1sen!2sse">
+      </iframe>
+    </section>
+    <section id="housing">
+      <h1><i class="fas fa-city"></i> Boende</h1>
+      <div class="flexContainer div-container" id="div-container-0">
+        <div class="flex">
+          <h2>Bränntorps gård</h2>
+          <img src="assets/branntorp.png"/>
+          <p>På gården där festen äger rum finns ett antal stugor som är våra att använda.</p>
+          <p>När inbjudningarna skickas ut finns det både enstaka sängplatser och hela stugor lediga. Dessa går att boka för 250 kr per sängplats. Anmäl intresse genom att mejla <a href="" class="mailto">obfgnq@ivqnbpuznephf.fr</a>. Vi ser gärna att alla sängplatser på gården nyttjas så gå gärna ihop flera som kan tänka sig att dela rum.</p>
+        </div>
+        <div class="flex">
+          <h2>Asplunda gård</h2>
+          <img src="assets/asplunda.jpg"/>
+          <p>Gård på 15 minuters promenad från Bränntorp. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
+          <p>Stugorna finns att boka på <a href="https://www.booking.com">booking.com</a>.</p>
+        </div>
+        <div class="flex">
+          <h2>First Camp Kolmården</h2>
+          <img src="assets/firstcamp.jpeg"/>
+          <p>Stugcamping på 20 minuters promenad från Bränntorp. Tänk på att Kolmården är ett populärt besöksmål under tiden för bröllopet och att boenden snabbt bokas upp.</p>
+          <p>Stugorna finns att boka på <a href="https://www.booking.com">booking.com</a>.</p>
+        </div>
+        <div class="flex">
+          <h2>Centrala Norrköping</h2>
+          <img src="assets/nkpg.jpg"/>
+          <p>I Norrköping finns flera hotell och vandrarhem med olika prisklasser och det går lätt att ta sig till och från centrala Norrköping från Bränntorps gård.</p>
+          <p>Med bil tar resan under 30 minuter och med buss (420) omkring 35 minuter.</p>
+          <p>Närmaste busshållplatsen (<b>Marmorbruksvägen</b>) ligger 5 minuter från gården men senare på natten kan man behöva gå bort till <b>Sandviken</b>, vilket är en promenad på 20 minuter.</p>
+        </div>
+      </div>
+      <div class="dot-container" id="dot-container-0">
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+        <span class="dot"></span> 
+      </div>
+    </section>
+    <section id="toastmasters">
+      <h1><i class="fas fa-bullhorn"></i> Toastmasters</h1>
+      <div class="narrow">
+        <p>Som toastmasters har vi den stora äran att presentera <b>Ditte och Anton</b>! Detta musicerande, styrkelyftande och Uppsalaälskande power couple består av Vidas syster och blivande svåger.</p>
+
+        <img src="assets/dinton1.jpg"/>
+
+        <p>Vill du hålla ett tal eller något annat typ av framförande på festen? Allt är möjligt! Kontakta i så fall våra toastmasters på <a href="" class="mailto">ivqnbpuznephf.gbnfgznfgref@bhgybbx.pbz</a>.</p>
+      </div>
+    </section>
+    <section id="rsvp">
+      <h1><i class="fas fa-envelope"></i> OSA</h1>
+      <div class="narrow border">  
+        <h2><b>Senast den 30 mars</b></h2>
+        <p>Maila till: <a href="" class="mailto">bfn@ivqnbpuznephf.fr</a></p>
+        <p>Berätta då också om eventuella kostpreferenser eller allergier.</p>
+        <p class="bottom">Varmt välkomna! <i class="fas fa-heart"></i></p>
+      </div>
+    </section>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
