--- a/index.html
+++ b/index.html
@@ -125,5 +125,6 @@
     </section>
   </main>
   <script src="script.js"></script>
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </body>
 </html>
