--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <div class="flex">
           <h2>Bränntorps gård</h2>
           <img src="assets/branntorp.png"/>
-          <p>På gården där festen äger rum finns ett fåtal stugor som är våra att använda. När inbjudningarna skickas ut finns  enstaka sängplatser och hela stugor lediga.</p>
-          <p>Dessa går att boka för 250 kr per sängplats. Anmäl intresse genom att mejla <a href="" class="mailto">obfgnq@ivqnbpuznephf.fr</a>. Vi ser gärna att alla sängplatser på gården nyttjas så gå gärna ihop flera som kan tänka sig att dela rum.</p>
+          <p>På gården där festen äger rum är de fåtalet stugor som finns upptagna.</p>
+          <p>Det finns plats för såväl tält som husvagn. Maila gärna <a href="" class="mailto">obfgnq@ivqnbpuznephf.fr</a> om du vill ha mer information om detta. Toaletter finns att tillgå i anslutning till festlokalen.</p>
         </div>
       </div>
       <div class="dot-container" id="dot-container-0">
