--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <p><b>Om det skulle bli regn</b>
               är vi så lite utomhus som det går. Vigseln är då i ridhuset.
-              Festlokalen är i så fall öppen från klockan 13 för gäster som är på plats tidigt och man kan också vara i stugorna.
+              Festlokalen är i så fall öppen från klockan 13 för gäster som är på plats tidigt. Stugorna är tillgängliga från kl 15.
               </p>
           </div>
         </div>
