Hide outdated info

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <li><a href="#wedding"><i class="fas fa-heart"></i><span> Bröllop!</span></a></li>
         <li><a href="#venue"><i class="fas fa-clock"></i><span> Viktig info</span></a></li>
         <li><a href="#map"><i class="fas fa-map"></i><span> Karta</span></a></li>
-        <li><a href="#housing"><i class="fas fa-city"></i><span> Boende</span></a></li>
+        <!--<li><a href="#housing"><i class="fas fa-city"></i><span> Boende</span></a></li>-->
         <li><a href="#toastmasters"><i class="fas fa-bullhorn"></i><span> Toastmasters</span></a></li>
-        <li><a href="#rsvp"><i class="fas fa-envelope"></i><span> OSA</span></a></li>
+        <!--<li><a href="#rsvp"><i class="fas fa-envelope"></i><span> OSA</span></a></li>-->
       </ul>
     </nav>
   </header>
@@ -68,6 +68,7 @@
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8299.01697434119!2d16.4046469139157!3d58.66692945396661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46592e37b48e2889%3A0xdd23879f1d90b745!2zQnLDpG5udG9ycHMgR8OlcmQ!5e0!3m2!1sen!2sse!4v1737888621575!5m2!1sen!2sse">
       </iframe>
     </section>
+    <!--
     <section id="housing">
       <h1><i class="fas fa-city"></i> Boende</h1>
       <p>Maila gärna <a href="" class="mailto">obfgnq@ivqnbpuznephf.fr</a> om du vill ha mer information eller tips om boende eller samåkning.</p>
@@ -103,6 +104,7 @@
         <span class="dot"></span> 
       </div>
     </section>
+    -->
     <section id="toastmasters">
       <h1><i class="fas fa-bullhorn"></i> Toastmasters</h1>
       <div class="narrow">
@@ -113,6 +115,7 @@
         <p>Vill du hålla ett tal eller något annat typ av framförande på festen? Allt är möjligt! Kontakta i så fall våra toastmasters på <a href="" class="mailto">ivqnbpuznephf.gbnfgznfgref@bhgybbx.pbz</a>.</p>
       </div>
     </section>
+    <!--
     <section id="rsvp">
       <h1><i class="fas fa-envelope"></i> OSA</h1>
       <div class="narrow border">  
@@ -122,6 +125,7 @@
         <p class="bottom">Varmt välkomna! <i class="fas fa-heart"></i></p>
       </div>
     </section>
+    -->
   </main>
   <script src="script.js"></script>
   <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
