--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
     </section>
     <section id="photo">
-      <h1><i class="fas fa-camera"></i> Toastmasters</h1>
+      <h1><i class="fas fa-camera"></i> Bilder</h1>
       <div class="narrow">
         <p>Vi vill hemskt gärna att du delar alla bilder från idag!</p>
 
